Remove unnecessary comma

--- a/views/conduct.haml
+++ b/views/conduct.haml
@@ -11,7 +11,7 @@
 %p Understand that speech and actions have consequences, and unacceptable behavior will not be tolerated.
 
 %p
-  %b If you are the subject of, or witness to any violations of this Code of Conduct, please contact any organizer via email, Meetup.com, or Slack.
+  %b If you are the subject of or witness to any violations of this Code of Conduct, please contact any organizer via email, Meetup.com, or Slack.
 
 %p The organizers will take all harassment reports seriously and remove the source of harassment while respecting individual privacy.
 
