Add link to YouTube channel

--- a/views/index.haml
+++ b/views/index.haml
@@ -14,16 +14,21 @@
     %span= link_to "Meetup", "https://www.meetup.com/sdruby/"
   .column
     %span.icon
+      %i.fab.fa-slack
+    %span= link_to "Slack", "https://sd-ruby.slack.com/"
+  .column
+    %span.icon
       %i.fab.fa-google
     %span= link_to "Google", "https://groups.google.com/g/sdruby"
+
+  .column
+    %span.icon
+      %i.fab.fa-youtube
+    %span= link_to "YouTube", "https://www.youtube.com/playlist?list=PLcluQkqofagqINsQsS2wz6b9XyE-bMiq8"
   .column
     %span.icon
       %i.fab.fa-twitter
     %span= link_to "Twitter", "https://twitter.com/sdruby"
-  .column
-    %span.icon
-      %i.fab.fa-slack
-    %span= link_to "Slack", "https://sd-ruby.slack.com/"
 
 %footer.footer
   .content.has-text-centered
