Tweak YouTube channel link

--- a/views/index.haml
+++ b/views/index.haml
@@ -24,7 +24,7 @@
   .column
     %span.icon
       %i.fab.fa-youtube
-    %span= link_to "YouTube", "https://www.youtube.com/playlist?list=PLcluQkqofagqINsQsS2wz6b9XyE-bMiq8"
+    %span= link_to "YouTube", "https://www.youtube.com/channel/UCJjoKJ6wdEGtC87uwEC1q_g/videos?view=0&sort=da"
   .column
     %span.icon
       %i.fab.fa-twitter
