Update link to YouTube channel

--- a/views/index.haml
+++ b/views/index.haml
@@ -23,7 +23,7 @@
   .column
     %span.icon
       %i.fab.fa-youtube
-    %span= link_to "YouTube", "https://www.youtube.com/channel/UCJjoKJ6wdEGtC87uwEC1q_g/videos?view=0&sort=da"
+    %span= link_to "YouTube", "http://youtube.com/@sdruby"
   .column
     %span.icon
       %i.fab.fa-twitter
