--- a/views/conduct.haml
+++ b/views/conduct.haml
@@ -1,12 +1,14 @@
 %h1 SD Ruby Code of Conduct
 
-%p This code of conduct governs SD Ruby's in-person and virtual events and any discussions and communications on our platform.
+%p This code of conduct governs SD Ruby's in-person and virtual events and any discussions and communications on any SD Ruby platform.
 
-%p At SD Ruby, we strive to be a positive voice in the San Diego Tech Community. We encourage participation from all members and guests. Diversity and inclusion make our community strong. Our goal is to maintain a safe, helpful and friendly community for everyone, regardless of experience, gender identity and expression, sexual orientation, disability, personal appearance, race, ethnicity, age, religion, nationality, or other defining characteristic.
+%p At SD Ruby, we strive to be a positive voice in the San Diego Tech Community. We encourage participation from all members and guests. Diversity and inclusion make our community strong. Our goal is to maintain a safe, helpful and friendly community for everyone, regardless of experience, gender identity and expression, sexual orientation, disability, personal appearance, race, ethnicity, age, religion, nationality, preferred programming language(s), technical knowledge or experience, or other defining characteristic.
 
 %p Be welcoming. Be kind. Look out for each other.
 
-%p Conduct or speech which might be considered sexist, racist, homophobic, transphobic, ableist or otherwise discriminatory or offensive in nature is unacceptable. Show respect towards others.
+%p MINASWAN - Matz is nice and so we are nice.
+
+%p Conduct or speech that might be considered sexist, racist, homophobic, transphobic, ableist, or otherwise discriminatory or offensive in nature is unacceptable. Show respect towards others.
 
 %p Understand that speech and actions have consequences, and unacceptable behavior will not be tolerated.
 
