--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -50,23 +50,23 @@ a {
 footer {
   background: white !important;
   padding: 9rem 0 0 0 !important;
-  font-size: 16px;
+  font-size: 18px;
   a {
-    color: #999;
+    color: #e11b22;
     &:hover {
-      color: #e11b22;
+      color: #6c6868;
     }
   }
 }
 
 .inspired_by {
-  color: #999;
-  font-size: 16px;
+  color: #6c6868;
+  font-size: 18px;
 }
 
 @media (max-width: 800px) {
   .content p {
-    margin: 0 ;
+    margin: 0;
     text-align: left;
   }
 }
