Add simple navbar to all pages

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -61,4 +61,11 @@
     %section.section
       .container
         .content.is-large
+          .tabs
+            %ul
+              %li.tab= link_to "Home", "/"
+              %li.tab= link_to "Meet the Organizers", "/organizers"
+              %li.tab= link_to "Code of Conduct", "/conduct"
+              %li.tab= link_to "Sign Up", "https://www.meetup.com/sdruby/", target: "blank", class: "button is-primary"
+
           = yield
