Tweak organizers page - Tweak headline and subheadline - Move Sarah to top as primary organizer - Move organizer titles below name links - Tweak Patrick's title

--- a/views/organizers.haml
+++ b/views/organizers.haml
@@ -1,29 +1,44 @@
-%h1 SD Ruby Organizers
+%h1 Meet the Organizers
 
-%p.has-text-centered Meet the team behind SD Ruby.
-
-.columns
-  .column
-    %span.icon
-      %i.fab.fa-linkedin
-    %span= link_to "Rob Kaufman, Organizer", "https://www.linkedin.com/in/robkaufman/", target: "blank"
-  .column
-    %span.icon
-      %i.fab.fa-linkedin
-    %span= link_to "Chris McCann, Organizer", "https://www.linkedin.com/in/chris-mccann-a663a21/", target: "blank"
+%h6.subtitle.has-text-weight-light This is the team that makes SD Ruby happen.
 
 .columns
   .column
     %span.icon
       %i.fab.fa-linkedin
-    %span= link_to "Sarah Proctor, Organizer", "https://www.linkedin.com/in/sarahproctor-dev/", target: "blank"
-  .column
-    %span.icon
-      %i.fab.fa-linkedin
-    %span= link_to "Erik Guzman, Organizer", "https://www.linkedin.com/in/erik-guzman-100/", target: "blank"
+    %span
+      = link_to "Sarah Proctor", "https://www.linkedin.com/in/sarahproctor-dev/", target: "blank"
+      %br
+      Organizer
 
 .columns
   .column
     %span.icon
       %i.fab.fa-linkedin
-    %span= link_to "Patrick Crowley, Board Member", "https://www.linkedin.com/in/patrick-crowley-12a1229/", target: "blank"
+    %span
+      = link_to "Rob Kaufman", "https://www.linkedin.com/in/robkaufman/", target: "blank"
+      %br
+      Co-Organizer
+  .column
+    %span.icon
+      %i.fab.fa-linkedin
+    %span
+      = link_to "Chris McCann", "https://www.linkedin.com/in/chris-mccann-a663a21/", target: "blank"
+      %br
+      Co-Organizer
+  .column
+    %span.icon
+      %i.fab.fa-linkedin
+    %span
+      = link_to "Erik Guzman", "https://www.linkedin.com/in/erik-guzman-100/", target: "blank"
+      %br
+      Co-Organizer
+
+.columns
+  .column
+    %span.icon
+      %i.fa-regular.fa-id-card
+    %span
+      = link_to "Patrick Crowley", "#"
+      %br
+      Organizer Emeritus
