--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,4 @@
-= image_tag("/assets/logo.svg", class: "logo", alt: "SD Ruby logo", size: "800x332")
+= image_tag("/images/logo.svg", class: "logo", alt: "SD Ruby logo", size: "800x332")
 
 #intro.is-size-5
   %p SD Ruby is a monthly meetup for developers who write Ruby code.
