--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %title= @title
     %link{href: "https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css", rel: "stylesheet", type: "text/css"}
-    %link{href: "/assets/app.css", rel: "stylesheet", type: "text/css"}
+    %link{href: "/styles/app.css?#{Time.now.to_i}", rel: "stylesheet", type: "text/css"}
     %script{crossorigin: "anonymous", src: "https://kit.fontawesome.com/2aaaf1daa6.js"}
     = haml :_meta
   %body
