--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,7 @@
     %title= @title
     %link{href: "https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css", rel: "stylesheet", type: "text/css"}
     %link{href: "/styles/app.css?#{Time.now.to_i}", rel: "stylesheet", type: "text/css"}
-    %script{crossorigin: "anonymous", src: "https://kit.fontawesome.com/2aaaf1daa6.js"}
+    %script{src: "https://kit.fontawesome.com/2aaaf1daa6.js", crossorigin: "anonymous"}
     = haml :_meta
   %body
     %section.section
