Simplify signup call-to-action text

--- a/views/index.haml
+++ b/views/index.haml
@@ -15,7 +15,7 @@
     📍 Ivy Street Coworking (in South Park, San Diego)
 
   %p
-    #{link_to "RSVP on our Meetup page!", "https://www.meetup.com/sdruby/events/", target: "blank", class: "button is-primary is-medium"}
+    #{link_to "Sign up on our Meetup page!", "https://www.meetup.com/sdruby/events/", target: "blank", class: "button is-primary is-medium"}
 
 .columns
   .column
