--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,6 +15,6 @@
               %li.tab= link_to "Home", "/"
               %li.tab= link_to "Meet the Organizers", "/organizers"
               %li.tab= link_to "Code of Conduct", "/conduct"
-              %li.tab= link_to "Sign Up", "https://www.meetup.com/sdruby/", target: "blank", class: "button is-primary"
+              %li.tab= link_to "Sign up", "https://www.meetup.com/sdruby/", target: "blank", class: "button is-primary"
 
           = yield
